Fix squished images on safari

--- a/core/static/core/css/account.css
+++ b/core/static/core/css/account.css
@@ -29,6 +29,7 @@ select {
 .graphic {
     background-size: cover;
     background-position: center center;
+    object-fit: none;
 }
 
 .form-wrapper {
